@@ -1,3 +1,4 @@
+* Search on Many2One fields include inactive records
 * Change select on fields into Boolean
 * Change format of search_value on ir.action.act_window
 * Manage relation field access
